# stl-utils

./: .gitignore  CMakeLists.txt  README.md
include/: utils.h
include/utils/: basic_string.h
tests/: _UtilsTestHelper.h  basic_string_replace.cpp  basic_string_split_string.cpp  basic_string_split_string_once.cpp  basic_string_trim.cpp
